Fixed spacing

--- a/index.css
+++ b/index.css
@@ -109,8 +109,8 @@ main {
     align-items: center;
     padding-top: 10%;
     margin-bottom: 15%;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 14%;
+    margin-right: 14%;
 }
 
 .intro-container h2 {
